--- a/MerlionPortal/MerlionPortal-war/web/grns/allmybids.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/grns/allmybids.xhtml
@@ -21,18 +21,17 @@
         </ui:define>
 
         <ui:define name="left">
-            <p:menu styleClass="menu-width">
+           <p:menu styleClass="menu-width">
                 <p:submenu label="Home" styleClass="display:block">
                     <p:menuitem value="GRNS Home" url="grnsindexpage.xhtml" />
                 </p:submenu>
                 <p:submenu label="Posting" styleClass="display:block">
                     <p:menuitem value="Aggregate Requests" url="aggregaterequests.xhtml" />
-                    <p:menuitem value="Spare Space" url="postmyspace.xhtml" />
+                    <p:menuitem value="Post Spare Space" url="postmyspace.xhtml" />
                 </p:submenu>
 
                 <p:submenu label="Marketplace" styleClass="display:block">
-                    <p:menuitem value="Start Reverse Auction" url="viewallposts.xhtml" />
-                    <p:menuitem value="Start Auction" url="viewallposts.xhtml" />
+                    <p:menuitem value="Start Bidding" url="viewallposts.xhtml" />
                 </p:submenu>
                 <p:submenu label="Manage My Posts" styleClass="display:block">
                     <p:menuitem value="All Posts" url="allmyposts.xhtml" />
