--- a/MerlionPortal/MerlionPortal-war/web/grns/grnsindexpage.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/grns/grnsindexpage.xhtml
@@ -27,12 +27,11 @@
                 </p:submenu>
                 <p:submenu label="Posting" styleClass="display:block">
                     <p:menuitem value="Aggregate Requests" url="aggregaterequests.xhtml" />
-                    <p:menuitem value="Spare Space" url="postmyspace.xhtml" />
+                    <p:menuitem value="Post Spare Space" url="postmyspace.xhtml" />
                 </p:submenu>
 
                 <p:submenu label="Marketplace" styleClass="display:block">
-                    <p:menuitem value="Start Reverse Auction" url="viewallposts.xhtml" />
-                    <p:menuitem value="Start Auction" url="viewallposts.xhtml" />
+                    <p:menuitem value="Start Bidding" url="viewallposts.xhtml" />
                 </p:submenu>
                 <p:submenu label="Manage My Posts" styleClass="display:block">
                     <p:menuitem value="All Posts" url="allmyposts.xhtml" />
