breadcrumb wms-Fuyao

--- a/MerlionPortal/MerlionPortal-war/web/wms/createwarehouserequest.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/createwarehouserequest.xhtml
@@ -70,6 +70,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="Create Warehouse Request" url="createwarehouserequest.xhtml" />
+            </p:breadCrumb>
             <p:panel id="basic" header="Create Service PO" style="margin-bottom:20px">
                 <h:form id="form">
                     <p:ajaxStatus style="width:16px;height:16px;">
