--- a/MerlionPortal/MerlionPortal-war/web/wms/orderfulfillment.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/orderfulfillment.xhtml
@@ -70,6 +70,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="Order Fulfillment" url="orderfulfillment.xhtml" />
+            </p:breadCrumb>
 
             <h:form>  
                 <p:fieldset legend="Customer Information " style="margin-bottom:20px">
