--- a/MerlionPortal/MerlionPortal-war/web/wms/stockauditprocess.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/stockauditprocess.xhtml
@@ -70,6 +70,11 @@
         </ui:define>
 
         <ui:define name="right">
+             <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="View Today's Stock Audits" url="viewduestockaudit.xhtml" />
+                <p:menuitem value="Stock Audit Process" url="stockauditprocess.xhtml" />
+            </p:breadCrumb>
             <h:form id="formMain">
                 <p:panel id="panel" header="Stock Audit">
                     <p:ajaxStatus style="width:16px;height:16px;">
