--- a/MerlionPortal/MerlionPortal-war/web/wms/viewallpendingrequests.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewallpendingrequests.xhtml
@@ -69,6 +69,10 @@
             </p:menu>
         </ui:define>
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="View All Pending Requests" url="viewallpendingrequests.xhtml" />
+            </p:breadCrumb>
             <h:form id="form">
                 <p:ajaxStatus style="width:16px;height:16px;">
                     <f:facet name="start">
