--- a/MerlionPortal/MerlionPortal-war/web/wms/viewallstockaudit.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewallstockaudit.xhtml
@@ -70,6 +70,10 @@
         </ui:define>
 
         <ui:define name="right">
+             <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="View All Stock Audits" url="viewallstockaudit.xhtml" />
+            </p:breadCrumb>
             <h:form id="formMain">
                 <p:panel id="panel" header=" View Stock Audit for a Warehouse">
                     <p:row>
