--- a/MerlionPortal/MerlionPortal-war/web/wms/viewoutgoingorders.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewoutgoingorders.xhtml
@@ -70,6 +70,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="View Outgoing Orders" url="viewoutgoingorders.xhtml" />
+            </p:breadCrumb>
 
             <p:tabView id = "tv">
                 <p:tab title="View My Orders to be Fulfilled">
