--- a/MerlionPortal/MerlionPortal-war/web/wms/viewrentedbins.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewrentedbins.xhtml
@@ -64,6 +64,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="View Rented Bins" url="viewrentedbins.xhtml" />
+            </p:breadCrumb>
             <h:form id="formMain">
                 <p:panel id="panel" header=" View All Rented Storage Bins">
                     <p:ajaxStatus style="width:16px;height:16px;">
