--- a/MerlionPortal/MerlionPortal-war/web/wms/viewserviceorderdetail.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewserviceorderdetail.xhtml
@@ -72,6 +72,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="View Service Order Details" url="viewserviceorderdetail.xhtml" />
+            </p:breadCrumb>
             <h:form id="form">
                 <p:fieldset legend="Service Contact Information" style="margin-bottom:20px">
                     <h:panelGrid columns="3" cellpadding="6">
