--- a/MerlionPortal/MerlionPortal-war/web/wms/viewsourcetransportorder.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewsourcetransportorder.xhtml
@@ -70,6 +70,10 @@
         </ui:define>
 
         <ui:define name="right">
+              <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="Process Transport Order" url="viewsourcetransportorder.xhtml" />
+            </p:breadCrumb>
             <h:form id="formMain">
                 <p:panel id="panel" header=" View Transport Orders to be processed">
                     <p:row>
