--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstock.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstock.xhtml
@@ -70,6 +70,10 @@
         </ui:define>
 
         <ui:define name="right">
+             <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="View Stock" url="viewstock.xhtml" />
+            </p:breadCrumb>
             <p:tabView id = "tv">
                 <p:tab title="View Stocks in a Warehouse">
 
