--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstockinrentedbins.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstockinrentedbins.xhtml
@@ -64,6 +64,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="View Stock in Rented Bins" url="viewstockinrentedbins.xhtml" />
+            </p:breadCrumb>
 
 
             <p:panel id="panel" header=" View Stocks In Rented Bins">
