--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstoragebin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstoragebin.xhtml
@@ -70,6 +70,10 @@
         </ui:define>
 
         <ui:define name="right">
+             <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
+            </p:breadCrumb>
             <h:form id="formMain">
 
                 <p:panel id="panel" header=" View Storage Bins in A Warehouse Zone">
