--- a/MerlionPortal/MerlionPortal-war/web/wms/warehouseservicefulfillmentcheck.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/warehouseservicefulfillmentcheck.xhtml
@@ -72,6 +72,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="Fulfillment Check" url="warehouseservicefulfillmentcheck.xhtml" />
+            </p:breadCrumb>
             <h:form id="form1" >
                 <p:ajaxStatus style="width:16px;height:16px;">
                     <f:facet name="start">
