--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -73,6 +73,9 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+            </p:breadCrumb>
 
             <div class="system-banner wms-system-banner"></div>
 
