--- a/MerlionPortal/MerlionPortal-war/web/wms/createinternalwo.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/createinternalwo.xhtml
@@ -64,6 +64,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="Create Internal Warehouse Order" url="createinternalwo.xhtml" />
+            </p:breadCrumb>
             <h:form id="formMain">
                 <p:panel id="panel" header="Create a new Internal Warehouse Order">
                     <p:ajaxStatus style="width:16px;height:16px;">
