--- a/MerlionPortal/MerlionPortal-war/web/wms/createstockaudit.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/createstockaudit.xhtml
@@ -70,6 +70,10 @@
         </ui:define>
 
         <ui:define name="right">
+             <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="Create Stock Audit" url="createstockaudit.xhtml" />
+            </p:breadCrumb>
             <h:form id="formMain">
                 <p:panel id="panel" header="Create Stock Audit Schedule">
                     <p:ajaxStatus style="width:16px;height:16px;">
