--- a/MerlionPortal/MerlionPortal-war/web/wms/stockfulfillmentprocess.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/stockfulfillmentprocess.xhtml
@@ -70,6 +70,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="Stock Fulfillment Process" url="stockfulfillmentprocess.xhtml" />
+            </p:breadCrumb>
             <h:form id="formMain">
                 <p:panel id="panel" header="Order Fulfillment Process">
                     <p:ajaxStatus style="width:16px;height:16px;">
