--- a/MerlionPortal/MerlionPortal-war/web/wms/viewduestockaudit.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewduestockaudit.xhtml
@@ -70,6 +70,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="View Today's Stock Audits" url="viewduestockaudit.xhtml" />
+            </p:breadCrumb>
             <h:form id="formMain">
                 <p:panel id="panel" header=" View Today's Stock Audit for a Warehouse">
                     <p:row>
