--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstockcoming.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstockcoming.xhtml
@@ -70,6 +70,11 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="All Incoming Transport Orders" url="viewdesttransportorder.xhtml" />
+                <p:menuitem value="View Incoming Stock" url="viewstockcoming.xhtml" />
+            </p:breadCrumb>
             <h:form id="formMain">
 
                 <p:dataTable id="movingStockData" var="movingStock" sortMode="multiple" editable="true" value="#{movingStockViewManagedBean.destMovingStocks}" 
