--- a/MerlionPortal/MerlionPortal-war/web/wms/viewwarehousezone.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewwarehousezone.xhtml
@@ -71,6 +71,10 @@
 
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="View Warehouse Zones" url="viewwarehousezone.xhtml" />
+            </p:breadCrumb>
             <h:form id="formMain">
 
                 <p:panel id="panel" header=" View Warehouse Zones in a Warehouse">
