--- a/MerlionPortal/MerlionPortal-war/web/crms/crmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/crmsindex.xhtml
@@ -2,7 +2,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
@@ -58,6 +57,7 @@
             <p:breadCrumb>
                 <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
             </p:breadCrumb>
+            <div class="system-banner-overlay">CRMS</div>
             <div class="system-banner crms-system-banner"></div>
             <h2 class="system-welcome">Welcome to CRMS system!</h2>
 
