--- a/MerlionPortal/MerlionPortal-war/web/grns/grnsindexpage.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/grns/grnsindexpage.xhtml
@@ -43,6 +43,9 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="GRNS Home" url="grnsindex.xhtml" />
+            </p:breadCrumb>
             <div class="system-banner-overlay">GRNS</div>
             <div class="system-banner grns-system-banner"></div>
 
