--- a/MerlionPortal/MerlionPortal-war/web/oes/oesindexpage.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/oesindexpage.xhtml
@@ -69,6 +69,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="OES Home" url="oesindex.xhtml" />
+            </p:breadCrumb>
+            <div class="system-banner-overlay">OES</div>
             <div class="system-banner oes-system-banner"></div>
 
             <h2 class="system-welcome">Welcome to Order Entry System!</h2>
