--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -77,11 +77,8 @@
                 <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
             </p:breadCrumb>
 
+            <div class="system-banner-overlay">WMS</div>
             <div class="system-banner wms-system-banner"></div>
-
-            <!--            <div class="system-breadcrumb">
-                            <a href="wmsindex.xhtml">WMS home</a>
-                        </div>-->
 
             <h2 class="system-welcome"> Welcome to WMS System! </h2>
             <div class="system-description">
