--- a/MerlionPortal/MerlionPortal-war/web/mrp/materialreq.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/materialreq.xhtml
@@ -204,8 +204,8 @@
                             </p:panelGrid>
                         </p:panel>
                     </p:dataGrid>
-                     <p:commandButton value="Go Back"  action="#{materialReqManagedBean.backToMPSResult}" />
                    <p:commandButton value="Proceed to Generate PO"  action="#{materialReqManagedBean.proceedToPO}" />
+                   <p:commandButton value="Do not Generate PO, Go Back to Main MRP Page"  action="#{materialReqManagedBean.doNotToPO}" />
                 </p:panel>
 
 
