--- a/MerlionPortal/MerlionPortal-war/web/mrp/mpsresult.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mpsresult.xhtml
@@ -145,8 +145,15 @@
                             </p:column>
                         </p:row>
                     </p:panelGrid>
-                    <p:commandButton value="Go Back"  action="#{mPSResultManagedBean.backToMPSBuffer}" />
-                    <p:commandButton value="Proceed to view material requirement planning"  action="#{mPSResultManagedBean.proceedToMaterialReq}" />
+                    <p:column style="width:42px">
+                        <p:commandButton value="Proceed to view material requirement planning" action="#{mPSResultManagedBean.proceedToMaterialReq}">
+                            <p:confirm header="Proceed to MRP?" message="Are you comfirm with the amount of component buffer being entered?" icon="ui-icon-alert" />
+                        </p:commandButton> 
+                        <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+                            <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                            <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                        </p:confirmDialog>
+                    </p:column>
                 </p:panel>
             </h:form>
         </ui:define>
